Fixed post-image-below-header image spacing

--- a/src/css/frontend/blog.css
+++ b/src/css/frontend/blog.css
@@ -11,6 +11,8 @@
 	transition: color 0.1s ease-in-out;
 }
 
+.post-image-aligned-left .inside-article.crdm-modern-excerpt .post-image,
+.post-image-aligned-right .inside-article.crdm-modern-excerpt .post-image,
 .post-image-above-header .inside-article.crdm-modern-excerpt div.post-image {
 	margin: 0;
 }
@@ -84,6 +86,11 @@
 .post-image-aligned-center .crdm-modern-excerpt .post-image,
 .post-image-aligned-right .generate-columns .crdm-modern-excerpt .post-image {
 	text-align: left;
+}
+
+.post-image-aligned-left .generate-columns .crdm-modern-excerpt .post-image,
+.post-image-aligned-right .generate-columns .crdm-modern-excerpt .post-image {
+	float: none;
 }
 
 .crdm-modern-excerpt .entry-header {
